package com.splendor.assistant.model;

public enum GemColor {
    WHITE, BLUE, GREEN, RED, BLACK
}
